検索画面のデータの取得タイミングを調整

--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
   </head>
   <body {{ BODY_ATTRS }}>
     <style>.noscript { display: none; }</style>
-    <noscript><style>.noscript { display: inherit; }</style></noscript>
+    <noscript><style>.noscript { display: inherit; } .withscript { display: none; }</style></noscript>
     {{ APP }}
   </body>
 </html>
